<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/ti_merchant_name">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_username"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:id="@+id/ti_merchant_mobile_number"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ti_merchant_name">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:inputType="numberDecimal"
                android:hint="@string/form_user_mobile_number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/tv_phone_pe_qr_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_phone_pe_qr"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toTopOf="@+id/iv_phone_pe_qr"
            app:layout_constraintBottom_toBottomOf="@+id/iv_phone_pe_qr"/>

    <TextView
            android:id="@+id/tv_paytm_qr_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_paytm_qr"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toTopOf="@+id/iv_paytm_qr"
            app:layout_constraintBottom_toBottomOf="@+id/iv_paytm_qr"/>
    <ImageView
            android:scaleType="centerCrop"
            android:contentDescription="@string/add_phone_pe_qr"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/iv_phone_pe_qr" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ti_merchant_mobile_number"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>

    <ImageButton
            android:padding="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_phone_pe_qr"
            android:id="@+id/ib_phone_pe_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:src="@drawable/ic_round_add_a_photo"
            app:layout_constraintEnd_toEndOf="@+id/iv_phone_pe_qr"
            app:layout_constraintBottom_toBottomOf="@+id/iv_phone_pe_qr"
            app:layout_constraintStart_toStartOf="@+id/iv_phone_pe_qr"
            app:layout_constraintTop_toTopOf="@+id/iv_phone_pe_qr"/>
    <ImageView
            android:scaleType="centerCrop"
            android:contentDescription="@string/add_paytm_qr"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/iv_paytm_qr" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_phone_pe_qr" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <ImageButton
            android:padding="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_paytm_qr"
            android:id="@+id/ib_paytm_qr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:src="@drawable/ic_round_add_a_photo"
            app:layout_constraintEnd_toEndOf="@+id/iv_paytm_qr"
            app:layout_constraintBottom_toBottomOf="@+id/iv_paytm_qr"
            app:layout_constraintStart_toStartOf="@+id/iv_paytm_qr"
            app:layout_constraintTop_toTopOf="@+id/iv_paytm_qr"/>

    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:textSize="16sp"
            android:text="@string/button_save"
            android:id="@+id/bn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
    />


</androidx.constraintlayout.widget.ConstraintLayout>